--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,6 +13,7 @@
                     turbo_confirm: "Are you sure?"
                   } %></a>
     <%= link_to "Edit", edit_product_path(@product), class: "card-link" %>
+    <%= button_to "Add To Cart", products_put_in_cart_path(@product), class: "btn btn-primary" %>
 </div>
 </div>
 
