--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,7 +8,11 @@
   <div class="card-body">
     <h5 class="card-title"><%= product.title %> </h5>
     <%= image_tag product.image, style: 'width:15rem;' %>
-    <%= link_to product.title, product %> 
+    <p class="card-text">Stock: <%= product.stock %></p>
+    <%= button_to "Add To Cart", products_put_in_cart_path(product), class: "btn btn-primary" %>
+    <p class="card-text">description for <%= link_to product.title, product %> </p>
+    
+   
     
   </div>
 </div>
