--- a/app/views/products/cart.html.erb
+++ b/app/views/products/cart.html.erb
@@ -19,7 +19,7 @@
 
 <a class="btn btn-primary" href= "dcookies" role="button">Checkout!</a>
 <%else%>
- <p>cart empty!</p>
+ <p>cart empty!!</p>
 <%end%>
 
 
