--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -15,6 +15,11 @@
   </div>
 
   <div>
+    <%= form.label :stock %><br>
+    <%= form.number_field :stock %>
+  </div>
+
+  <div>
     <%= form.label :description %><br>
     <%= form.text_area :description %><br>
     <% @product.errors.full_messages_for(:description).each do |message| %>
